# prism

./: .gitignore  .mise.toml  AGENTS.md  README.md
rust/: Cargo.toml
rust/prism_api/: Cargo.toml  README.md
rust/prism_api/src/: diff.rs  lib.rs  review.rs
rust/prism_core/: Cargo.toml  README.md  build.rs
rust/prism_core/src/: diff.rs  lib.rs  prism_core.udl  repository.rs  suggestion.rs
rust/prism_core/src/api/: diff.rs  mod.rs  repository.rs  review.rs
rust/prism_core/src/ffi/: error.rs  mod.rs  session.rs
rust/prism_core/src/plugins/: amp.rs  builtin.rs  mod.rs  registry.rs  service.rs  types.rs
rust/prism_core/tests/: amp_plugin.rs  diff_integration.rs  ffi_plugin_integration.rs  ffi_test_plugin.rs  plugin_service.rs  repository_integration.rs  suggestion_apply.rs
rust/prism_plugin_api/: Cargo.toml  README.md
rust/prism_plugin_api/src/: lib.rs  registry.rs  types.rs
rust/prism_plugins/: Cargo.toml  README.md
rust/prism_plugins/src/: amp.rs  git_only.rs  lib.rs
rust/prism_plugins/tests/: amp_plugin.rs
scripts/: build-xcframework.sh
swift/PrismApp/: Package.swift
swift/PrismApp/Sources/PrismApp/: AttachFlowView.swift  ContentView.swift  DiffBrowserView.swift  DiffModels.swift  PrismApp.swift  SessionShellView.swift  SessionStore.swift
swift/PrismApp/Tests/PrismAppTests/: SessionStoreTests.swift
swift/PrismFFI/: Package.swift
swift/PrismFFI/Sources/PrismFFI/: PrismCoreClient.swift  prism_core.swift  prism_coreFFI.h  prism_coreFFI.modulemap
swift/PrismFFI/Tests/PrismFFITests/: PrismCoreClientTests.swift
(+4 files in other folders)
