[package]
name = "prism_core"
version = "0.1.0"
edition = "2021"
description = "Core library crate for the Prism macOS review app."
publish = false

[lib]
name = "prism_core"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
