[package]
name = "prism_core"
version = "0.1.0"
edition = "2021"
description = "Core library crate for the Prism macOS review app."
publish = false
build = "build.rs"

[build-dependencies]
uniffi_build = "0.28"

[lib]
name = "prism_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
camino = "1.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.18"
uniffi = "0.28"
uniffi_bindgen = "0.28"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.10"
