 [package]
 name = "prism_plugins"
 version = "0.1.0"
 edition = "2021"
 description = "Official Prism agent plugin implementations"
 publish = false

 [dependencies]
 prism_api = { path = "../prism_api" }
 prism_plugin_api = { path = "../prism_plugin_api" }
 wait-timeout = "0.2"

 [dev-dependencies]
 tempfile = "3.10"
